--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@rails/webpacker": "4.3.0",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
+    "list.js": "^2.3.1",
     "mapbox-gl": "^2.2.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
